--- a/index.html
+++ b/index.html
@@ -285,6 +285,10 @@
           <h2 class="h2 article-title">Resume</h2>
         </header>
 
+        <p>
+          <b><i>Download PDF</i></b>
+        </p>
+
         <section class="timeline">
 
           <div class="title-wrapper">
@@ -299,41 +303,14 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">University school of the arts</h4>
+              <h4 class="h4 timeline-item-title">Johns Hopkins University</h4>
 
-              <span>2007 — 2008</span>
-
-              <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
-              </p>
-
-            </li>
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">New york academy of art</h4>
-
-              <span>2006 — 2007</span>
+              <span>2021 — 2025</span>
 
               <p class="timeline-text">
-                Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
-                omnis..
-              </p>
-
-            </li>
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">High school of art and design</h4>
-
-              <span>2002 — 2004</span>
-
-              <p class="timeline-text">
-                Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur
-                magni dolores
-                eos.
+                Bachelor of Science in Computer Engineering & Biomedical Engineering<br>
+                GPA: 3.95, Dean’s List 2021 - Present<br>
+                Honors: Tau Beta Pi Engineering Honor Society
               </p>
 
             </li>
