tinkered with portfolio

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Yanisa Angkanapiwat (Belle)">Richard hanrick</h1>
+          <h1 class="name" title="Yanisa Angkanapiwat (Belle)">Yanisa Angkanapiwat (Belle)</h1>
 
           <p class="title">Web developer</p>
         </div>
@@ -75,20 +75,6 @@
               <p class="contact-title">Email</p>
 
               <a href="mailto:yangkan1@jhu.edu" class="contact-link">yangkan1@jhu.edu</a>
-            </div>
-
-          </li>
-
-          <li class="contact-item">
-
-            <div class="icon-box">
-              <ion-icon name="phone-portrait-outline"></ion-icon>
-            </div>
-
-            <div class="contact-info">
-              <p class="contact-title">Phone</p>
-
-              <a href="tel:+16679100933" class="contact-link">+1 (667) 910-0933</a>
             </div>
 
           </li>
@@ -174,7 +160,7 @@
 
           <p>
             I'm a senior at Johns Hopkins University, double majoring in Biomedical Engineering and Computer Engineering.
-            My passion lies in applying embedded systems to create innovative solutions in neurotechnology and medical device.
+            My passion lies in applying embedded systems to create innovative solutions in neurotechnology and medical devices.
           </p>
           
 
