added 1st project again

--- a/index.html
+++ b/index.html
@@ -271,9 +271,11 @@
           <h2 class="h2 article-title">Resume</h2>
         </header>
 
-        <p>
+        <!--
+          <p>
           <b><i>Download PDF</i></b>
         </p>
+        -->
 
         <section class="timeline">
 
@@ -295,7 +297,7 @@
 
               <p class="timeline-text">
                 Bachelor of Science in Computer Engineering & Biomedical Engineering<br>
-                GPA: 3.95, Dean’s List 2021 - Present<br>
+                GPA: 3.96, Dean’s List 2021 - Present<br>
                 Honors: Tau Beta Pi Engineering Honor Society
               </p>
 
@@ -510,9 +512,9 @@
                   <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Finance</h3>
+                <h3 class="project-title">SensoPatch</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">A wireless haptic feedback system with high-density tactile sensing glove</p>
 
               </a>
             </li>
