fixed about page

--- a/index.html
+++ b/index.html
@@ -79,23 +79,20 @@
 
           </li>
 
-          <li class="contact-item">
-
-            <div class="icon-box">
-              <ion-icon name="phone-portrait-outline"></ion-icon>
-            </div>
-
-            <div class="contact-info">
-              <p class="contact-title">Phone</p>
-
-              <a href="tel:+16679100933" class="contact-link">+1 (667) 910-0933</a>
-            </div>
-
-          </li>
 
         </ul>
 
         <div class="separator"></div>
+
+        <ul class="social-list">
+
+          <li class="social-item">
+            <a href="https://www.linkedin.com/in/yanisaang/" class="social-link">
+              <ion-icon name="logo-linkedin"></ion-icon>
+            </a>
+          </li>
+
+        </ul>
 
       </div>
 
