--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Yanisa Angkanapiwat (Belle)">Richard hanrick</h1>
+          <h1 class="name" title="Yanisa Angkanapiwat (Belle)">Yanisa (Belle)<br> Angkanapiwat</h1>
 
-          <p class="title">Web developer</p>
+          <p class="title">Embedded Software Engineer</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -79,23 +79,19 @@
 
           </li>
 
-          <li class="contact-item">
-
-            <div class="icon-box">
-              <ion-icon name="phone-portrait-outline"></ion-icon>
-            </div>
-
-            <div class="contact-info">
-              <p class="contact-title">Phone</p>
-
-              <a href="tel:+16679100933" class="contact-link">+1 (667) 910-0933</a>
-            </div>
-
-          </li>
-
         </ul>
 
         <div class="separator"></div>
+
+        <ul class="social-list">
+
+          <li class="social-item">
+            <a href="https://www.linkedin.com/in/yanisaang/" target="_blank" class="social-link">
+              <ion-icon name="logo-linkedin"></ion-icon>
+            </a>
+          </li>
+
+        </ul>
 
       </div>
 
@@ -159,17 +155,12 @@
 
         <section class="about-text">
           <p>
-            I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
-            I enjoy
-            turning complex problems into simple, beautiful and intuitive designs.
+            I'm a senior at Johns Hopkins University, double majoring in Biomedical Engineering and Computer Engineering.
+            My passion lies in applying embedded systems to create innovative solutions in neurotechnology and medical devices.
           </p>
 
           <p>
-            My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-            Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
+            Here, you will find a growing list of projects and experiments I enjoy tinkering with, both in school and in my free time :)
           </p>
         </section>
 
@@ -187,15 +178,18 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-design.svg
-                " alt="design icon" width="40">
+                <img src="./assets/images/icon-firmware.svg
+                " alt="firmware icon" width="40">
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web design</h4>
+                <h4 class="h4 service-item-title">Firmware</h4>
 
                 <p class="service-item-text">
-                  The most modern and high-quality design made at a professional level.
+                  - Embedded C, C++, assembly<br>
+                  - ARM-based microcontrollers<br>
+                  - Real-time embedded systems<br>
+                  - On-device machine learning
                 </p>
               </div>
 
@@ -204,14 +198,16 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
+                <img src="./assets/images/icon-circuit.svg" alt="circuit icon" width="40">
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web development</h4>
+                <h4 class="h4 service-item-title">Circuit Design</h4>
 
                 <p class="service-item-text">
-                  High-quality development of sites at the professional level.
+                  - PCB design (rigid/flex)<br>
+                  - Low-power, wireless systems<br>
+                  - SMT/THT soldering
                 </p>
               </div>
 
