--- a/index.html
+++ b/index.html
@@ -155,6 +155,10 @@
 
         <section class="about-text">
           <p>
+            <b><i>Welcome to my playground!</i></b>
+          </p>
+
+          <p>
             I'm a senior at Johns Hopkins University, double majoring in Biomedical Engineering and Computer Engineering.
             My passion lies in applying embedded systems to create innovative solutions in neurotechnology and medical devices.
           </p>
@@ -478,41 +482,14 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">University school of the arts</h4>
+              <h4 class="h4 timeline-item-title">Johns Hopkins University</h4>
 
-              <span>2007 — 2008</span>
-
-              <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
-              </p>
-
-            </li>
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">New york academy of art</h4>
-
-              <span>2006 — 2007</span>
+              <span>2021 — 2025</span>
 
               <p class="timeline-text">
-                Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
-                omnis..
-              </p>
-
-            </li>
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">High school of art and design</h4>
-
-              <span>2002 — 2004</span>
-
-              <p class="timeline-text">
-                Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur
-                magni dolores
-                eos.
+                Bachelor of Science in Computer Engineering & Biomedical Engineering<br>
+                GPA: 3.96, Dean’s List 2021 - Present<br>
+                Honors: Tau Beta Pi Engineering Honor Society
               </p>
 
             </li>
@@ -726,9 +703,9 @@
                   <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Finance</h3>
+                <h3 class="project-title">SensoPatch</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">A wireless haptic feedback system with high-density tactile sensing glove for EMG-controlled prosthetic hand</p>
 
               </a>
             </li>
