--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>vCard - Personal Portfolio</title>
+  <title>Belle Angkanapiwat</title>
 
   <!--
     - favicon
@@ -355,8 +355,7 @@
           </ul>
 
         </section>
-      -->
-
+-->
         <!--
           - testimonials modal
         -->
@@ -400,8 +399,7 @@
           </section>
 
         </div>
-      -->
-
+-->
         <!--
           - clients
         -->
