added new html for project1 page

--- a/index.html
+++ b/index.html
@@ -817,6 +817,15 @@
 
       </article>
 
+      
+      <article class="portfolio" data-page="portfolio">
+
+        <header>
+          <h2 class="h2 article-title">Portfolio</h2>
+        </header>
+
+      </article>
+
 
 
 
