--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="project1.html">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -817,19 +817,7 @@
 
       </article>
 
-      
-      <article class="portfolio" data-page="portfolio">
-
-        <header>
-          <h2 class="h2 article-title">Portfolio</h2>
-        </header>
-
-      </article>
-
-
-
-
-
+  
       <!--
         - #BLOG
       -->
