tried adding proj1 as new article

--- a/index.html
+++ b/index.html
@@ -139,6 +139,16 @@
 
       </nav>
 
+      <nav class="navbar-proj">
+        <ul class="navbar-proj-list">
+          <li class="navbar-proj-item">
+            <button class="navbar-proj-link" data-nav-link>Project1</button>
+          </li>
+        </ul>
+      </nav>
+
+      
+
 
 
 
@@ -813,6 +823,21 @@
 
           </ul>
 
+        </section>
+
+      </article>
+
+
+      <article class="portfolio" data-page="proj1">
+
+        <header>
+          <h2 class="h2 article-title">Project 1</h2>
+        </header>
+  
+        <section class="proj1-text">
+          <p>
+            <b><i>Hello!</i></b>
+          </p>
         </section>
 
       </article>
