tried linking using <a>

--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="project1.html">
+              <a href="#" class="navbar-link" data-nav-link>Resume</a>
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
