used id to fix <a>

--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
         - #RESUME
       -->
 
-      <article class="resume" data-page="resume">
+      <article id="resume" class="resume" data-page="resume">
 
         <header>
           <h2 class="h2 article-title">Resume</h2>
@@ -660,7 +660,7 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#" class="navbar-link" data-nav-link>
+              <a href="#resume" class="navbar-link" data-nav-link>
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
