used button to fix <a>

--- a/index.html
+++ b/index.html
@@ -456,7 +456,9 @@
               <p class="timeline-text">
                 Bachelor of Science in Computer Engineering & Biomedical Engineering<br>
                 GPA: 3.96, Dean’s List 2021 - Present<br>
-                Honors: Tau Beta Pi Engineering Honor Society
+                Honors: Tau Beta Pi Engineering Honor Society<br><br>
+                Relevant coursework: Software Development for Real-time Embedded Systems, Machine Intelligence for Embedded Systems,
+                Digital Systems, Digital Signal Processing, Electronics Lab, Biomedical Instrumentation
               </p>
 
             </li>
@@ -660,7 +662,7 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#resume" class="navbar-link" data-nav-link="resume">
+              <button class="navbar-link" data-nav-link="resume">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -674,7 +676,7 @@
 
                 <p class="project-category">A wireless haptic feedback system with high-density tactile sensing glove for EMG-controlled prosthetic hand</p>
 
-              </a>
+              </button>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
