used active button to fix <a>

--- a/index.html
+++ b/index.html
@@ -116,42 +116,30 @@
         <ul class="navbar-list">
 
           <li class="navbar-item">
-            <button class="navbar-link  active" data-nav-link="about">About</button>
+            <button class="navbar-link  active" data-nav-link>About</button>
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link="resume">Resume</button>
+            <button class="navbar-link" data-nav-link>Resume</button>
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link="portfolio">Portfolio</button>
+            <button class="navbar-link" data-nav-link>Portfolio</button>
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link="blog">Blog</button>
+            <button class="navbar-link" data-nav-link>Blog</button>
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link="contact">Contact</button>
+            <button class="navbar-link" data-nav-link>Contact</button>
           </li>
 
         </ul>
 
-      </nav>
-
-      <nav class="navbar-proj">
-        <ul class="navbar-proj-list">
-          <li class="navbar-proj-item">
-            <button class="navbar-proj-link" data-nav-link>Project1</button>
-          </li>
-        </ul>
       </nav>
 
       
-
-
-
-
 
       <!--
         - #ABOUT
@@ -662,7 +650,7 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <button class="navbar-link" data-nav-link="resume">
+              <button class="navbar-link  active" data-nav-link="resume">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
