used data-target to fix <a>

--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <button class="navbar-link  active" data-nav-link="resume">
+              <a class="navbar-link" data-nav-link data-target="project1">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -664,7 +664,7 @@
 
                 <p class="project-category">A wireless haptic feedback system with high-density tactile sensing glove for EMG-controlled prosthetic hand</p>
 
-              </button>
+              </a>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
@@ -818,17 +818,13 @@
       </article>
 
 
-      <article class="portfolio" data-page="proj1">
+
+      <article class="portfolio" data-page="project1">
 
         <header>
           <h2 class="h2 article-title">Project 1</h2>
         </header>
-  
-        <section class="proj1-text">
-          <p>
-            <b><i>Hello!</i></b>
-          </p>
-        </section>
+        <p>This is the content of the new page.</p>
 
       </article>
 
