added skills box for proj1

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <ul class="navbar-list">
 
           <li class="navbar-item">
-            <button class="navbar-link  active" data-nav-link>About</button>
+            <button class="navbar-link  active" data-nav-link data-target="about">About</button>
           </li>
 
           <li class="navbar-item">
@@ -650,7 +650,7 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a data-nav-link data-target="resume">
+              <a data-nav-link data-target="proj-sensopatch">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -818,13 +818,45 @@
       </article>
 
 
+      <!--
+        - #PROJECT: SENSOPATCH
+      -->
 
-      <article class="portfolio" data-page="project1">
+      <article class="portfolio" data-page="proj-sensopatch">
 
         <header>
-          <h2 class="h2 article-title">Project 1</h2>
+          <h2 class="h2 article-title">SensoPatch</h2>
         </header>
-        <p>This is the content of the new page.</p>
+
+        <p> Project description </p>
+
+        <section class="proj-skills">
+
+          <ul class="proj-skills-list">
+
+            <li class="proj-skills-item">
+
+              <div class="proj-skills-icon-box">
+                <img src="./assets/images/icon-firmware.svg
+                " alt="firmware icon" width="40">
+              </div>
+
+              <div class="proj-skills-content-box">
+                <h4 class="h4 proj-skills-item-title">Firmware</h4>
+
+                <p class="proj-skills-item-text">
+                  - Embedded C, C++, assembly<br>
+                  - ARM-based microcontrollers<br>
+                  - Real-time embedded systems<br>
+                  - On-device machine learning
+                </p>
+              </div>
+
+            </li>
+
+          </ul>
+
+        </section>
 
       </article>
 
