tried fixing skills box

--- a/index.html
+++ b/index.html
@@ -824,15 +824,39 @@
 
       <article class="portfolio" data-page="proj-sensopatch">
 
+        <!-- add back button -->
+
         <header>
           <h2 class="h2 article-title">SensoPatch</h2>
         </header>
 
         <p> Project description </p>
 
+        <separator></separator>
+
         <section class="proj-skills">
 
           <ul class="proj-skills-list">
+
+            <li class="proj-skills-item">
+
+              <div class="proj-skills-icon-box">
+                <img src="./assets/images/icon-firmware.svg
+                " alt="firmware icon" width="40">
+              </div>
+
+              <div class="proj-skills-content-box">
+                <h4 class="h4 proj-skills-item-title">Firmware</h4>
+
+                <p class="proj-skills-item-text">
+                  - Embedded C, C++, assembly<br>
+                  - ARM-based microcontrollers<br>
+                  - Real-time embedded systems<br>
+                  - On-device machine learning
+                </p>
+              </div>
+
+            </li>
 
             <li class="proj-skills-item">
 
