tried changing z-index

--- a/index.html
+++ b/index.html
@@ -836,21 +836,49 @@
 
         <section class="proj-skills">
 
-          <div class="proj-skills-icon-box">
-            <img src="./assets/images/icon-firmware.svg
-            " alt="firmware icon" width="40">
-          </div>
+          <ul class="proj-skills-list">
 
-          <div class="proj-skills-content-box">
-            <h4 class="h4 proj-skills-item-title">Firmware</h4>
+            <li class="proj-skills-item">
 
-            <p class="proj-skills-item-text">
-              - Embedded C, C++, assembly<br>
-              - ARM-based microcontrollers<br>
-              - Real-time embedded systems<br>
-              - On-device machine learning
-            </p>
-          </div>
+              <div class="proj-skills-icon-box">
+                <img src="./assets/images/icon-firmware.svg
+                " alt="firmware icon" width="40">
+              </div>
+
+              <div class="proj-skills-content-box">
+                <h4 class="h4 proj-skills-item-title">Firmware</h4>
+
+                <p class="proj-skills-item-text">
+                  - Embedded C, C++, assembly<br>
+                  - ARM-based microcontrollers<br>
+                  - Real-time embedded systems<br>
+                  - On-device machine learning
+                </p>
+              </div>
+
+            </li>
+
+            <li class="proj-skills-item">
+
+              <div class="proj-skills-icon-box">
+                <img src="./assets/images/icon-firmware.svg
+                " alt="firmware icon" width="40">
+              </div>
+
+              <div class="proj-skills-content-box">
+                <h4 class="h4 proj-skills-item-title">Firmware</h4>
+
+                <p class="proj-skills-item-text">
+                  - Embedded C, C++, assembly<br>
+                  - ARM-based microcontrollers<br>
+                  - Real-time embedded systems<br>
+                  - On-device machine learning
+                </p>
+              </div>
+
+            </li>
+
+          </ul>
 
         </section>
 
