--- a/index.html
+++ b/index.html
@@ -824,15 +824,12 @@
 
       <article class="portfolio" data-page="proj-sensopatch">
 
-        <!-- add back button -->
-
         <header>
+          <a data-nav-link data-target="portfolio">
+            <ion-icon name="arrow-back-outline"></ion-icon>
+          </a>
           <h2 class="h2 article-title">SensoPatch</h2>
         </header>
-
-        <p> Project description </p>
-
-        <separator></separator>
 
         <section class="proj-skills">
 
@@ -841,24 +838,37 @@
             <li class="proj-skills-item">
 
               <div class="proj-skills-icon-box">
-                <img src="./assets/images/icon-firmware.svg
-                " alt="firmware icon" width="40">
+                <img src="./assets/images/icon-robot-palm.svg
+                " alt="robot palm icon" width="40">
               </div>
 
-              <div class="proj-skills-content-box">
-                <h4 class="h4 proj-skills-item-title">Firmware</h4>
+              <div>
+                <h4 class="h4 proj-skills-item-title">Skills</h4>
 
                 <p class="proj-skills-item-text">
-                  - Embedded C, C++, assembly<br>
-                  - ARM-based microcontrollers<br>
-                  - Real-time embedded systems<br>
-                  - On-device machine learning
+                  - Flex PCB Design on KICAD<br>
+                  - ARM Cortex-M4F microcontroller<br>
+                  - BLE communication
                 </p>
               </div>
 
             </li>
 
           </ul>
+
+        </section>
+
+        <section>
+          SensoPatch is a wireless, reconfigurable haptic feedback system designed for study on upper limb amputees with EMG-controlled prosthetic hand.
+          The system consists of a tactile pressure sensing glove and wireless vibration stickers.
+
+          <h4 class="h4 proj-skills-item-title">Design</h4>
+          <h4 class="h5 proj-skills-item-title">The Glove</h4>
+          <h4 class="h5 proj-skills-item-title">The Stickers</h4>
+          <h4 class="h4 proj-skills-item-title">How It Works</h4>
+          <h4 class="h4 proj-skills-item-title">Goals</h4>
+
+
 
         </section>
 
