added icons and proj1 pic

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
+                <img src="./assets/images/icon-signals.svg" alt="signals icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -237,7 +237,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
+                <img src="./assets/images/icon-fpga.svg" alt="fpga icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -319,9 +319,7 @@
 
               <h4 class="h4 timeline-item-title">R&D Co-op</h4>
 
-              <p>STERIS Endoscopy</p>
-
-              <span>June — August 2024 (Conroe, TX)</span>
+              <span>STERIS Endoscopy<br>June — August 2024 (Conroe, TX)</span>
 
               <p class="timeline-text">
                 - Automated design verification test of endoscope connector<br>
@@ -334,9 +332,7 @@
 
               <h4 class="h4 timeline-item-title">Systems Engineering Intern</h4>
 
-              <p>SetPoint Medical</p>
-
-              <span>June - August 2023 (Santa Clarita, CA)</span>
+              <span>SetPoint Medical<br> June - August 2023 (Santa Clarita, CA)</span>
 
               <p class="timeline-text">
                 - Performed firmware testing for bootloader and embedded applications in implantable nerve stimulator (STM8) and RF
@@ -347,20 +343,6 @@
               </p>
 
             </li>
-
-            <!-- <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Web designer</h4>
-
-              <span>2010 — 2013</span>
-
-              <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
-              </p>
-
-            </li> -->
 
           </ol>
 
@@ -390,7 +372,7 @@
               - Designed flexible PCBs for a tactile pressure sensor glove and wireless haptic feedback system for upper limb amputees.<br>
               - Programmed nRF52 microcontroller to deliver vibration using Bluetooth LE communication (6 peripherals).<br>
               - Developed a Python script to interface with EMG-controlled prosthetic hand.<br>
-              - Conducted human subjects research to improve sensory feedback. Collected and analyzed tactile data using MATLAB.<br>
+              - Conducted human subjects research to improve sensory feedback. Collected and analyzed tactile data using MATLAB.<br><br>
               <b>Publication:</b> Angkanapiwat, Y., Slepyan, A., Greene, R. & Thakor, N. (2024). SensoPatch: A reconfigurable haptic feedback with
               high-density tactile sensing glove. 2024 IEEE Biomedical Circuits and Systems Conference (BioCAS). (Accepted)
             </p>
@@ -404,7 +386,7 @@
             <span>June – September 2022</span>
 
             <p class="timeline-text">
-              - Constructed a 3D visual brain map of neural activity in Parkinson’s patients by analyzing and integrating CT and MRI
+              - Constructed a 3D visual brain map of neural activity in Parkinson's patients by analyzing and integrating CT and MRI
               scans with iEEG signals from the implanted electrodes using MATLAB.
             </p>
 
@@ -414,68 +396,6 @@
 
       </section>
         
-        <!-- <section class="skill">
-
-          <h3 class="h3 skills-title">My skills</h3>
-
-          <ul class="skills-list content-card">
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">Web design</h5>
-                <data value="80">80%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 80%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">Graphic design</h5>
-                <data value="70">70%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 70%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">Branding</h5>
-                <data value="90">90%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 90%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">WordPress</h5>
-                <data value="50">50%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 50%;"></div>
-              </div>
-
-            </li>
-
-          </ul>
-
-        </section> -->
-
       </article>
 
 
