--- a/index.html
+++ b/index.html
@@ -317,9 +317,9 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">R&D Co-op</h4>
+              <h4 class="h4 timeline-item-title">R&D Co-op, STERIS Endoscopy</h4>
 
-              <span>STERIS Endoscopy<br>June — August 2024 (Conroe, TX)</span>
+              <span>June — August 2024 (Conroe, TX)</span>
 
               <p class="timeline-text">
                 - Automated design verification test of endoscope connector<br>
@@ -330,9 +330,9 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Systems Engineering Intern</h4>
+              <h4 class="h4 timeline-item-title">Systems Engineering Intern, SetPoint Medical</h4>
 
-              <span>SetPoint Medical<br> June - August 2023 (Santa Clarita, CA)</span>
+              <span> June - August 2023 (Santa Clarita, CA)</span>
 
               <p class="timeline-text">
                 - Performed firmware testing for bootloader and embedded applications in implantable nerve stimulator (STM8) and RF
@@ -478,7 +478,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
+                  <img src="./assets/images/project-senso.jpg" alt="finance" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">SensoPatch</h3>
@@ -681,7 +681,7 @@
 
         </section>
 
-        <section>
+        <section class="about-text">
           SensoPatch is a wireless, reconfigurable haptic feedback system designed for study on upper limb amputees with EMG-controlled prosthetic hand.
           The system consists of a tactile pressure sensing glove and wireless vibration patches.
         </section>
@@ -692,9 +692,11 @@
 
           <h4 class="h3 proj-skills-item-title">Design</h3>
 
+          <img src="./assets/images/project-senso.jpg" alt="sensopatch_1">
+          
           <p>
             <h4 class="h4 proj-skills-item-title">The Glove</h4>
-            <ul>
+            <section class="about-text">
               <li>
                 5x5 sensor array on fPCB: 5 conductive column traces and 5 conductive row traces intertwine at major sensory
                 locations in the fingers and palm
@@ -709,7 +711,7 @@
                 Once the Velostat on the fPCB is pressed, the pressure at each intersection directly translates to voltage readings.
                 The pressure on the hand is measured via TDMA approach.
               </li>
-            </ul>
+            </section>
           </p>
 
           <p>
