--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
 
           <h4 class="h3 proj-skills-item-title">Design</h3>
 
-          <img src="./assets/images/project-senso.jpg" alt="sensopatch_1">
+          <img src="./assets/images/project-senso.jpg" alt="sensopatch_1" style="width:500px;height:500px;">
           
           <p>
             <h4 class="h4 proj-skills-item-title">The Glove</h4>
@@ -767,7 +767,7 @@
         - #BLOG
       -->
 
-      <article class="blog" data-page="blog">
+      <!-- <article class="blog" data-page="blog">
 
         <header>
           <h2 class="h2 article-title">Blog</h2>
@@ -949,7 +949,7 @@
 
         </section>
 
-      </article>
+      </article> -->
 
 
 
@@ -959,7 +959,7 @@
         - #CONTACT
       -->
 
-      <article class="contact" data-page="contact">
+      <!-- <article class="contact" data-page="contact">
 
         <header>
           <h2 class="h2 article-title">Contact</h2>
@@ -996,7 +996,7 @@
 
         </section>
 
-      </article>
+      </article> -->
 
     </div>
 
