--- a/index.html
+++ b/index.html
@@ -127,13 +127,13 @@
             <button class="navbar-link" data-nav-link data-target="portfolio">Portfolio</button>
           </li>
 
-          <!-- <li class="navbar-item">
+          <li class="navbar-item">
             <button class="navbar-link" data-nav-link data-target="blog">Blog</button>
           </li>
 
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link data-target="contact">Contact</button>
-          </li> -->
+          </li>
 
         </ul>
 
