--- a/index.html
+++ b/index.html
@@ -815,9 +815,9 @@
         - #BLOG
       -->
 
-      <!-- <article class="blog" data-page="blog">
+      <article class="blog" data-page="blog">
 
-        <header>
+        <!-- <header>
           <h2 class="h2 article-title">Blog</h2>
         </header>
 
@@ -993,9 +993,9 @@
               </a>
             </li>
 
-          </ul>
+          </ul> 
 
-        </section>
+        </section> -->
 
       </article> -->
 
@@ -1007,9 +1007,9 @@
         - #CONTACT
       -->
 
-      <!-- <article class="contact" data-page="contact">
+      <article class="contact" data-page="contact">
 
-        <header>
+        <!-- <header>
           <h2 class="h2 article-title">Contact</h2>
         </header>
 
@@ -1042,7 +1042,7 @@
 
           </form>
 
-        </section>
+        </section> -->
 
       </article> -->
 
