--- a/index.html
+++ b/index.html
@@ -817,7 +817,7 @@
 
       <article class="blog" data-page="blog">
 
-        <!-- <header>
+        <header>
           <h2 class="h2 article-title">Blog</h2>
         </header>
 
@@ -995,7 +995,7 @@
 
           </ul> 
 
-        </section> -->
+        </section>
 
       </article> -->
 
@@ -1009,7 +1009,7 @@
 
       <article class="contact" data-page="contact">
 
-        <!-- <header>
+        <header>
           <h2 class="h2 article-title">Contact</h2>
         </header>
 
@@ -1042,7 +1042,7 @@
 
           </form>
 
-        </section> -->
+        </section>
 
       </article> -->
 
