--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
 
         <section class="projects">
 
-          <!-- <ul class="filter-list">
+          <ul class="filter-list">
 
             <li class="filter-item">
               <button class="active" data-filter-btn>All</button>
@@ -432,9 +432,9 @@
               <button data-filter-btn>Web development</button>
             </li>
 
-          </ul> -->
+          </ul>
 
-          <!-- <div class="filter-select-box">
+          <div class="filter-select-box">
 
             <button class="filter-select" data-select>
 
@@ -466,7 +466,7 @@
 
             </ul>
 
-          </div> -->
+          </div>
 
           <ul class="project-list">
 
