--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
             <button class="navbar-link" data-nav-link data-target="portfolio">Portfolio</button>
           </li>
 
-          <li class="navbar-item">
+          <!-- <li class="navbar-item">
             <button class="navbar-link" data-nav-link data-target="blog">Blog</button>
-          </li>
+          </li> -->
 
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link data-target="contact">Contact</button>
@@ -815,6 +815,7 @@
         - #BLOG
       -->
 
+      <!--
       <article class="blog" data-page="blog">
 
         <header>
