added sensopatch pics

--- a/index.html
+++ b/index.html
@@ -691,8 +691,8 @@
         <section>
 
           <h4 class="h3 proj-skills-item-title">Design</h3>
-
-          <img src="./assets/images/project-senso.jpg" alt="sensopatch_1" style="width:500px;height:500px;">
+          <br>
+          <img src="./assets/images/project-senso.jpg" alt="sensopatch_1" style="width:400px;height:400px;">
 
           <br>
           
@@ -736,6 +736,8 @@
         <section>
 
           <h3 class="h3 proj-skills-item-title">How It Works</h3>
+          <br>
+          <img src="./assets/images/project-senso2.jpg" alt="sensopatch_2" style="width:400px;">
           <section class="about-text">
           <p>
             The tactile sensor array collects and wirelessly transmits pressure information to a set of haptic feedback patches that convert the sensor data into
@@ -754,13 +756,15 @@
         <section>
 
           <h3 class="h3 proj-skills-item-title">Project Goals</h3>
-          <section>
+          <section class="about-text">
           <p>
             SensoPatch is a reconfigurable, open-source tool that allows future research to conduct studies on various aspects of the optimal method of haptic feedback delivery.
             As part of the preliminary study, participants were recruited to complete blindfold discrimination and functional tasks using controlling myoelectric hand
             via EMG and bypass prosthetic. <span>The full details of this project can be found on the paper <a href="https://arxiv.org/abs/2409.19155" target="_blank"><b>HERE!</b></a></span>
           </p>
           </section>
+          <br>
+          <img src="./assets/images/project-senso3.jpg" alt="sensopatch_3" style="width:400px;">
         </section>
 
       </article>
@@ -796,7 +800,7 @@
 
                 <p class="proj-skills-item-text">
                   - Linux on Raspberry Pi<br>
-                  - I2C, SPI, WiFi
+                  - I2C, SPI, WiFi<br>
                   - IMU
                 </p>
               </div>
